fixed FindBugs warnings